{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 126,
  "lineage": "6074107d-8564-d786-aa65-32cb162ad66b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-011b9a771d52b0a4a",
            "domain": "vpc",
            "id": "eipalloc-009713676e20a15d4",
            "instance": "i-037a444664ad1a1ea",
            "network_interface": "eni-093ded9dcb8b077bd",
            "private_dns": "ip-172-2-0-209.ap-southeast-1.compute.internal",
            "private_ip": "172.2.0.209",
            "public_dns": "ec2-52-220-160-214.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.160.214",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.WebApp",
            "aws_internet_gateway.igw",
            "aws_key_pair.deployer",
            "aws_security_group.main_security_group",
            "aws_subnet.WebAppPublicSubnet",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.public_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MongoDBLogs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-093da183b859d5a4b",
            "arn": "arn:aws:ec2:ap-southeast-1:483156523221:instance/i-01bc0fb0cd9c472eb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01bc0fb0cd9c472eb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04d4a423488ac358c",
            "private_dns": "ip-10-1-1-57.ap-southeast-1.compute.internal",
            "private_ip": "10.1.1.57",
            "public_dns": "ec2-13-212-67-59.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.212.67.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cdfea578c565e7ce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02eb07ef26606879e",
            "tags": {
              "Name": "MongoDBLogs"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fa64e69a8e51c384"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.deployer",
            "aws_security_group.main_security_group",
            "aws_subnet.MongoDBLogsPrivateSubnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MongoDBMetadata",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-093da183b859d5a4b",
            "arn": "arn:aws:ec2:ap-southeast-1:483156523221:instance/i-071f1c14a0bf69b74",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071f1c14a0bf69b74",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c3e4675afe44d652",
            "private_dns": "ip-10-1-2-109.ap-southeast-1.compute.internal",
            "private_ip": "10.1.2.109",
            "public_dns": "ec2-54-151-202-126.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.151.202.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-050292b12224fa72a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0acd4dea201f1231a",
            "tags": {
              "Name": "MongoDBMetadata"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fa64e69a8e51c384"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.deployer",
            "aws_security_group.main_security_group",
            "aws_subnet.MongoDBMetadataPrivateSubnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server_MySql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-093da183b859d5a4b",
            "arn": "arn:aws:ec2:ap-southeast-1:483156523221:instance/i-06353cffcb7f71aa3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06353cffcb7f71aa3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07dac4459b295ffaa",
            "private_dns": "ip-10-1-0-34.ap-southeast-1.compute.internal",
            "private_ip": "10.1.0.34",
            "public_dns": "ec2-13-250-102-134.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.102.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d2c0a2928f113f29",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b30f1f7a0404ff9",
            "tags": {
              "Name": "Server_MySql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fa64e69a8e51c384"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.deployer",
            "aws_security_group.main_security_group",
            "aws_subnet.MySqlPrivateSubnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebApp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-093da183b859d5a4b",
            "arn": "arn:aws:ec2:ap-southeast-1:483156523221:instance/i-037a444664ad1a1ea",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037a444664ad1a1ea",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-093ded9dcb8b077bd",
            "private_dns": "ip-172-2-0-209.ap-southeast-1.compute.internal",
            "private_ip": "172.2.0.209",
            "public_dns": "ec2-52-221-243-217.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.221.243.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03863eb041db3a9de",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00dc5dbedbf6c5caf",
            "tags": {
              "Name": "WebApp"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fa64e69a8e51c384"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.deployer",
            "aws_security_group.main_security_group",
            "aws_subnet.WebAppPublicSubnet",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.public_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:483156523221:internet-gateway/igw-02e8408bb6c9b8280",
            "id": "igw-02e8408bb6c9b8280",
            "owner_id": "483156523221",
            "tags": {
              "Name": "igw"
            },
            "vpc_id": "vpc-06fa60645f233604d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c88cc04ab43f1b0",
            "original_route_table_id": "rtb-0922d746a242f2cf5",
            "route_table_id": "rtb-023ac378fb947fd30",
            "vpc_id": "vpc-06fa60645f233604d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route-table",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-023ac378fb947fd30",
            "owner_id": "483156523221",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e8408bb6c9b8280",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table"
            },
            "vpc_id": "vpc-06fa60645f233604d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac0c5471febb305e",
            "route_table_id": "rtb-023ac378fb947fd30",
            "subnet_id": "subnet-00dc5dbedbf6c5caf"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route-table",
            "aws_subnet.WebAppPublicSubnet",
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.public_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:483156523221:security-group/sg-0fa64e69a8e51c384",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa64e69a8e51c384",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "main_security_group",
            "name_prefix": "",
            "owner_id": "483156523221",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06fa60645f233604d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MongoDBLogsPrivateSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:483156523221:subnet/subnet-02eb07ef26606879e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-02eb07ef26606879e",
            "map_public_ip_on_launch": false,
            "owner_id": "483156523221",
            "tags": {
              "Name": "MongoDBLogsPrivateSubnet"
            },
            "vpc_id": "vpc-06fa60645f233604d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MongoDBMetadataPrivateSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:483156523221:subnet/subnet-0acd4dea201f1231a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0acd4dea201f1231a",
            "map_public_ip_on_launch": false,
            "owner_id": "483156523221",
            "tags": {
              "Name": "MongoDBMetadataPrivateSubnet"
            },
            "vpc_id": "vpc-06fa60645f233604d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MySqlPrivateSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:483156523221:subnet/subnet-09b30f1f7a0404ff9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-09b30f1f7a0404ff9",
            "map_public_ip_on_launch": false,
            "owner_id": "483156523221",
            "tags": {
              "Name": "MySqlPrivateSubnet"
            },
            "vpc_id": "vpc-06fa60645f233604d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "WebAppPublicSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:483156523221:subnet/subnet-00dc5dbedbf6c5caf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.2.0.0/24",
            "id": "subnet-00dc5dbedbf6c5caf",
            "map_public_ip_on_launch": false,
            "owner_id": "483156523221",
            "tags": {
              "Name": "WebAppPublicSubnet"
            },
            "vpc_id": "vpc-06fa60645f233604d"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc_ipv4_cidr_block_association.public_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:483156523221:vpc/vpc-06fa60645f233604d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0f045a6b9a42bef63",
            "default_route_table_id": "rtb-0922d746a242f2cf5",
            "default_security_group_id": "sg-01bd2a069fd9a73e8",
            "dhcp_options_id": "dopt-22d3c345",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06fa60645f233604d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0922d746a242f2cf5",
            "owner_id": "483156523221",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}